# Neuland_sim

./: .gitignore  CMakeLists.txt  OutChecker.C  README.md  checkout.cxx  cmake_additional.cmake  cosmic.cxx  neuland.cxx  plot.cxx  reader.cxx  simulate.cxx  sourceme.sh  test.yaml
Protobuf/: CMakeLists.txt  NeulandHit.proto  NeulandHit_pb2.py  R3BNeulandHitProto.cxx  R3BNeulandHitProto.h  check.py
R3BCalibration/: CMakeLists.txt  NeulandCalibrationLinkDef.h  R3BNeulandCal2Hit.cxx  R3BNeulandCal2Hit.h  R3BNeulandMapped2Cal.cxx  R3BNeulandMapped2Cal.h  R3BNeulandMapped2CalPar.cxx
calibration/: CMakeLists.txt  NeulandCalTesting.cxx  NeulandCalTesting.h
cmake_modules/: cmake_additional.cmake
digitizing/: CMakeLists.txt  DigitizingEngine.cxx  DigitizingEngine.h  DigitizingTacQuila.cxx  DigitizingTacQuila.h  DigitizingTamex.cxx  DigitizingTamex.h  R3BNeulandDigitizer.cxx  R3BNeulandDigitizer.h  R3BNeulandField.cxx  R3BNeulandField.h  R3BNeulandHitMon.cxx  R3BNeulandHitMon.h
macros/: digi1.C  eventDisplay.C  position.csv  sim1.C  sourceme.sh
macros/paraReader/: Cal2Hit.C  HitModulePar.csv
macros/reader/: Reader.C  neuland_hit.C
macros/test/: test.cxx  test.h
neuland/: CMakeLists.txt  R3BNeuland.h  R3BNeulandTacquilaReader.cxx  R3BNeulandTacquilaReader.h  R3BNeulandTamexReader.cxx  R3BNeulandTamexReader.h
online/: CMakeLists.txt  R3BNeulandOnlineSpectra.cxx  R3BNeulandOnlineSpectra.h
parameters/: check.C  loscalpar_v1.root  peak.C
r3bneuland/: CMakeLists.txt  R3BNeulandTamexReader.cxx
r3bneulandsimulation/: R3BNeuland.cxx  R3BNeuland.h  simulationLinkDef.h
share/: Analyser.cxx  Analyser.h  CMakeLists.txt  EventProgress.cxx  EventProgress.h  HistWriter.cxx  HistWriter.h  NeulandTask.cxx  NeulandTask.h  R3BNeuland.cxx  R3BNeuland.h  RunManager.cxx  RunManager.h  SimNodes.cxx  SimNodes.h  Simulator.cxx  Simulator.h
test/: CMakeLists.txt  R3BNeuland.cxx  TestTask.cxx  TestTask.h
